2000-01-23  Per Bothner  <per@bothner.com>

	* SourceMessages.java (errorCount):  Make private.
	* Lexer.java (clearErrors):  Use SourceMessages.errorCount method.

1999-12-10  Per Bothner  <per@bothner.com>

	* NullReader.java, CharArrayInPort.java:  Moved from kawa/lang.
	* Makefile.am, Makefile.in (java_JAVA):  Add new files.

1999-10-20  Bruce Lewis  <brlewis@alum.mit.edu>

	* gnu/text/LispReader.java: readListBody now takes an int
	argument for endDelimiter; -1 means read to EOF.  This facilitates
	reading an entire file with line/column info.

1999-09-05  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java (readLine):  New overloaded version.

	* SourceMessages.java (checkErrors):  New method overloading.
	For both versions, do not return true if only warnings were seen.

	* LispReader.java (readEscape):  Move here from ELispReader.

1999-06-30  Per Bothner  <per@bothner.com>

	* PadFormat.java (format):  Trivial optimization.

1999-04-22  Per Bothner  <bothner@Magnus.Cygnus.COM>

	* SourceMessages.java:  New class (collection of SourceError).
	* Makefile.am, Makefile.in (java_JAVA):  Add SourceMessages.java.
	* Lexer.java:  Re-written - error handling now using SourceMessages.
	* LispReader.java (readlistBody, readList):  New overloads that
	take an explicit end delimiter, not just ')'.
	* SourceError.java (printAll):  Replaced by SourceMessages.printAll.
	* SyntaxException.java (lexer):  Lexer field replaced by ...
	(messages):  ... new SourceMessages field.  Change methods to match.

Thu Mar 11 11:14:49 1999  Per Bothner  <bothner@Magnus.Cygnus.COM>

	* LispReader.java:  New class.
	* Makefile.am (java_JAVA), Makefile.in:  Add LispReader.java.

Thu Jun 25 22:36:19 1998  Per Bothner  <bothner@cygnus.com>

	New directory.