@@ -8,7 +8,7 @@ javadir=$(datadir)/java/$(subdir)
 
 java_JAVA=\
   LineBufferedReader.java SourceError.java Lexer.java SyntaxException.java \
-  SourceMessages.java \
+  QueueReader.java SourceMessages.java \
   LispReader.java NullReader.java CharArrayInPort.java \
   ReportFormat.java LiteralFormat.java PadFormat.java CompoundFormat.java \
   RomanIntegerFormat.java EnglishIntegerFormat.java \
